# Euterpea2

./: .gitignore  Euterpea.cabal  Euterpea.lhs  License  README.md  ReadMe.txt  package.yaml  stack.yaml
Euterpea/: Music.lhs
Euterpea/IO/: Audio.hs  MIDI.hs
Euterpea/IO/Audio/: BasicSigFuns.lhs  Basics.hs  CSound.lhs  IO.hs  Render.hs
Euterpea/IO/MIDI/: ExportMidiFile.lhs  FromMidi.lhs  FromMidi2.lhs  GeneralMidi.hs  MEvent.lhs  MidiIO.lhs  Play.lhs  ToMidi.lhs  ToMidi2.lhs
Euterpea/Music/Note/: Music.lhs
