name:           Euterpea
version:        2.0.6
Cabal-Version:  >= 1.8
license:        BSD3
license-file:	License
copyright:      Copyright (c) 2008-2017 Euterpea authors
category:       Sound, Music
stability:      experimental
build-type:     Custom
author:         Paul Hudak <paul.hudak@yale.edu>,
                Eric Cheng <eric.cheng@aya.yale.edu>,
                Hai (Paul) Liu <hai.liu@aya.yale.edu>,
                Donya Quick <donyaquick@gmail.com>,
                Dan Winograd-Cort <dwincort@gmail.com >
maintainer:     Donya Quick <donyaquick@gmail.com>
bug-reports:    https://github.com/Euterpea/Euterpea2/issues
homepage:       http://www.euterpea.com
synopsis:       Library for computer music research and education
description:
        Euterpea is a domain-specific language embedded in Haskell for
        computer music research, education, and development, providing
        both note-level and signal-level abstractions.  It is a descendant
        of Haskore and HasSound, and is intended for both educational purposes
        as well as serious computer music applications.  Euterpea is a
        wide-spectrum DSL, suitable for high-level music representation,
        algorithmic composition, and analysis; mid-level concepts such as
        MIDI; and low-level audio processing, sound synthesis, and instrument
        design.
extra-source-files:
        ReadMe.txt

Library
  hs-source-dirs: .
  ghc-options: -O2 -funbox-strict-fields -fexcess-precision
  extensions: CPP
  exposed-modules:
        Euterpea,
        Euterpea.Music,
        Control.Arrow.ArrowP,
        Control.SF.SF,
        Euterpea.IO.Audio.Basics,
        Euterpea.IO.Audio.BasicSigFuns,
        Euterpea.IO.Audio.IO,
        Euterpea.IO.Audio.Render,
        Euterpea.IO.Audio.Types,
        Euterpea.IO.Audio.CSound,
        Euterpea.IO.Audio,
        Euterpea.IO.MIDI.MEvent,
        Euterpea.IO.MIDI.MidiIO,
        Euterpea.IO.MIDI.FromMidi,
        Euterpea.IO.MIDI.FromMidi2,
        Euterpea.IO.MIDI.GeneralMidi,
        Euterpea.IO.MIDI.ToMidi,
        Euterpea.IO.MIDI.ToMidi2,
        Euterpea.IO.MIDI.Play,
        Euterpea.IO.MIDI.ExportMidiFile,
        Euterpea.IO.MIDI
  other-modules:
  build-depends:
        base >= 4 && < 5,
        arrows >= 0.4 && < 0.5,
        array>=0.5.0.0 && <=0.6,
        deepseq>=1.3.0.2 && <=1.5,
        random>=1.0.1.1 && <=1.2,
        PortMidi==0.1.6.1,
        HCodecs == 0.5.1,
        stm >= 2.4 && <2.5,
        containers>=0.5.5.1 && <0.6,
        bytestring>=0.10.4.0 && <= 0.10.9,
        heap >= 1.0 && < 2.0,
        ghc-prim
